tests/neg/annot-invalid.check
-- Error: tests/neg/annot-invalid.scala:4:21 ---------------------------------------------------------------------------
4 |  val x1: Int @annot(new Object {}) = 0 // error
  |                     ^^^^^^^^^^^^^
  |                     Implementation restriction: expression cannot be used inside an annotation argument.
  |                     Tree: final class $anon() extends Object() {}
  |                     Type: Object {...}
-- Error: tests/neg/annot-invalid.scala:5:28 ---------------------------------------------------------------------------
5 |  val x2: Int @annot({class C}) = 0 // error
  |                      ^^^^^^^
  |                      Implementation restriction: expression cannot be used inside an annotation argument.
  |                      Tree: class C() extends Object() {}
  |                      Type: C
-- Error: tests/neg/annot-invalid.scala:7:9 ----------------------------------------------------------------------------
7 |  @annot(new Object {}) val y1: Int = 0 // error
  |         ^^^^^^^^^^^^^
  |         Implementation restriction: expression cannot be used inside an annotation argument.
  |         Tree: final class $anon() extends Object() {}
  |         Type: Object {...}
-- Error: tests/neg/annot-invalid.scala:8:16 ---------------------------------------------------------------------------
8 |  @annot({class C}) val y2: Int = 0  // error
  |          ^^^^^^^
  |          Implementation restriction: expression cannot be used inside an annotation argument.
  |          Tree: class C() extends Object() {}
  |          Type: C
